<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_login"
    tools:context=".presentation.login.LoginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageView
            android:id="@+id/loginSide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/side"
            android:scaleType="centerCrop"
            android:layout_weight="2"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/loginSide"
            android:layout_margin="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/TimeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/textColorHeader"
                        android:textSize="24sp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true">

                        <ImageView
                            android:id="@+id/WeatherImageView"
                            android:layout_width="20dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center"/>

                        <TextView
                            android:id="@+id/TemperatureTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="?attr/textColorHeader"
                            android:textSize="13sp"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"/>

                    </LinearLayout>

                </RelativeLayout>

                <TextView
                    android:id="@+id/TodayTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="?attr/textColorOnBackgroundLogin"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:src="@drawable/logo"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/textColorHeader"
                    android:textStyle="bold"
                    android:paddingTop="10dp"
                    android:textSize="28sp"
                    android:text="@string/app_name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:textSize="14sp"
                    android:textColor="?attr/textColorOnBackgroundLogin"
                    android:text="@string/login_description_1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:textSize="14sp"
                    android:textColor="?attr/textColorOnBackgroundLogin"
                    android:text="@string/login_description_2"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/LoginButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:cornerRadius="10dp"
                    app:icon="@drawable/ic_arrow_right_alt"
                    app:iconGravity="textEnd"
                    app:iconPadding="5dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:text="@string/button_sign" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/RegistrationButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/textColorHeader"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:text="@string/button_registration"
                    style="@style/Widget.MaterialComponents.Button.TextButton"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>