<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.HomeFragment">

    <RelativeLayout
        android:id="@+id/homeHeader"
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="13dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/LogoImageView"
            android:layout_width="45dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/LogoImageView"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/app_name"
            android:textColor="?attr/textColorHeader"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/MenuImageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/transparent_icon_ripple"
            android:clickable="true"
            android:padding="14dp"
            android:src="@drawable/ic_menu"
            app:tint="?attr/textColorOnBackgroundHome" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/homeHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/homeBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/home_overview"
                    android:textColor="?attr/textColorOnBackgroundHome"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="116dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="10dp"
                    app:cardBackgroundColor="?attr/cartColorOnBackground"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="25dp">

                        <TextView
                            android:id="@+id/balanceTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:textColor="?attr/textColorHeader"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:text="@string/home_balance"
                            android:textSize="12sp" />

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/icon_ripple"
                            android:clickable="true"
                            android:scaleType="center"
                            android:src="@drawable/ic_add" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/homeContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/homeBalance">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="13dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/home_contacts"
                        android:textColor="?attr/textColorOnBackgroundHome"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/transparent_icon_ripple"
                        android:clickable="true"
                        android:padding="12dp"
                        android:src="@drawable/ic_scan"
                        app:tint="?attr/textColorOnBackgroundHome" />

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/contactsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_contact" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/homeServices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/homeContacts">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="13dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/home_services"
                        android:textColor="?attr/textColorOnBackgroundHome"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/transparent_icon_ripple"
                        android:clickable="true"
                        android:padding="12dp"
                        android:src="@drawable/ic_settings"
                        app:tint="?attr/textColorOnBackgroundHome" />

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/servicesRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="vertical"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="4"
                    tools:listitem="@layout/item_service" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>